syntax = "proto3";

package buf.validate;

option java_package = "build.buf.validate";
option go_package = "github.com/bufbuild/protovalidate/buf/validate";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  FieldConstraints field = 1159;
}

message FieldConstraints {
  oneof type {
    StringRules string = 14;
    Int32Rules int32 = 5;
    RepeatedRules repeated = 18;
  }
}

message StringRules {
  optional uint64 min_len = 2;
  optional uint64 max_len = 3;
  optional string pattern = 6;
}

message Int32Rules {
  optional int32 gte = 5;
  optional int32 lte = 3;
}

message RepeatedRules {
  optional uint64 max_items = 2;
}